# hackaton-ai-front

./: Dockerfile  Dockerfile.deploy  Makefile  README.md  docker-compose.local.yml  main.py  pyproject.toml
.streamlit/: config.toml
src/api/: __init__.py
src/auth/: __init__.py
src/components/: __init__.py  get_description.py  upload_dbs.py
